<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="Addition">+</string>
    <string name="Percentage">%</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="Multiply">\u00D7</string>
    <string name="Subtraction">-</string>
    <string name="SqrRoot">\u221A</string>
    <string name="Division">\u00F7</string>
    <string name="SignSwap">\u00B1</string>
    <string name="_0">0</string>
    <string name="Decimal">.</string>
    <string name="Equals">=</string>
    <string name="Clear">C</string>
</resources>
